--- a/css/home.css
+++ b/css/home.css
@@ -47,7 +47,7 @@
 .qb-header {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 20;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
   width: 100%;
@@ -80,12 +80,19 @@
   height: 100vh;
 }
 
-.qb-wall .qb-wall-bg {
-  height: 100%;
-  width: 100%;
+.qb-wall .qb-wall-bg-cover {
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
+  opacity: 0;
 }
 
-.qb-wall .qb-wall-bg .qb-wall-cover {
+.qb-wall .qb-wall-bg-cover .qb-wall-bg {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover {
   height: 100%;
   width: 100%;
   position: relative;
@@ -93,13 +100,13 @@
   font-family: 'Permanent Marker', cursive;
 }
 
-.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content {
+.qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover .qb-wall-content {
   height: 100%;
   width: 100%;
   display: table;
 }
 
-.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
+.qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
   color: #f1f1f1;
   display: table-cell;
   vertical-align: middle;
@@ -113,23 +120,23 @@
     width: 100%;
     height: 100vh;
   }
-  .qb-wall .qb-wall-bg {
+  .qb-wall .qb-wall-bg-cover .qb-wall-bg {
     height: 100%;
     width: 100%;
   }
-  .qb-wall .qb-wall-bg .qb-wall-cover {
+  .qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover {
     height: 100%;
     width: 100%;
     position: relative;
     background-color: rgba(0, 0, 0, 0.2);
     font-family: 'Permanent Marker', cursive;
   }
-  .qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content {
+  .qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover .qb-wall-content {
     height: 100%;
     width: 100%;
     display: table;
   }
-  .qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
+  .qb-wall .qb-wall-bg-cover .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
     color: #f1f1f1;
     display: table-cell;
     vertical-align: middle;
@@ -405,6 +412,132 @@
 
 .qb-footer {
   background-color: #08b76d;
-  padding: 100px;
+  padding-top: 1.5%;
+  padding-bottom: 100px;
+}
+
+.qb-footer .qb-footer-padding {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.qb-footer .qb-footer-head {
+  padding: 10px;
+  font-size: 30px;
+  color: #fff;
+  text-align: left;
+}
+
+.qb-footer .qb-footer-text {
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  padding: 10px;
+}
+
+.qb-footer .qb-footer-cards {
+  padding: 2.5%;
+  text-align: center;
+}
+
+.qb-footer .qb-footer-cards .qb-footer-card {
+  width: 24%;
+  display: inline-block;
+  text-align: center;
+}
+
+.qb-footer .qb-footer-cards .qb-footer-card .qb-footer-icon {
+  font-size: 50px;
+  color: #fff;
+}
+
+.qb-footer .qb-footer-cards .qb-footer-card .qb-footer-name {
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.qb-footer .qb-site {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.qb-footer .qb-site .qb-site-logo {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.qb-footer .qb-site .qb-site-text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.qb-footer .qb-credit {
+  background-color: #fff;
+  text-align: center;
+  color: #3a3a3a;
+}
+
+@media only screen and (max-width: 600px) {
+  .qb-footer {
+    background-color: #08b76d;
+    padding-top: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .qb-footer .qb-footer-head {
+    padding: 10px;
+    font-size: 30px;
+    color: #fff;
+    text-align: center;
+  }
+  .qb-footer .qb-footer-text {
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    padding: 5px;
+  }
+  .qb-footer .qb-footer-cards {
+    padding: 5%;
+    text-align: center;
+  }
+  .qb-footer .qb-footer-cards .qb-footer-card {
+    width: 30%;
+    text-align: center;
+  }
+  .qb-footer .qb-footer-cards .qb-footer-card .qb-footer-icon {
+    font-size: 25px;
+    color: #fff;
+  }
+  .qb-footer .qb-footer-cards .qb-footer-card .qb-footer-name {
+    font-size: 15px;
+    font-weight: 500;
+    color: #fff;
+  }
+  .qb-footer .qb-site {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .qb-footer .qb-site .qb-site-logo {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 500;
+    color: #fff;
+  }
+  .qb-footer .qb-site .qb-site-text {
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+  }
+  .qb-footer .qb-credit {
+    background-color: #3a3a3a;
+    text-align: center;
+    color: #fff;
+  }
 }
 /*# sourceMappingURL=home.css.map */
