--- a/css/home.scss
+++ b/css/home.scss
@@ -40,7 +40,7 @@
 .qb-header{
     position: fixed;
     background-color: rgba(0,0,0,0.3);
-    z-index: 2;
+    z-index: 20;
     transition-duration: 0.5s;
     width: 100%;
 
@@ -75,42 +75,15 @@
 .qb-wall{
     width: 100%;
     height: 100vh;
-    .qb-wall-bg{
-        height: 100%;
-        width: 100%;
 
-        .qb-wall-cover{
-            height: 100%;
-            width:100%;
-            position: relative;
-            background-color: rgba(0,0,0,0.2);
-            font-family: 'Permanent Marker', cursive;
+    .qb-wall-bg-cover{
+        transition-duration: 2s;
+        opacity: 0;
 
-            .qb-wall-content{
-                height: 100%;
-                width: 100%;
-                display: table;
-
-                .qb-wall-text{
-                    color: rgb(241, 241, 241);
-                    display: table-cell;
-                    vertical-align: middle;
-                    text-align: center;
-                    font-size: 60px;
-                    padding: 5%;
-                }
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 600px){
-    .qb-wall{
-        width: 100%;
-        height: 100vh;
         .qb-wall-bg{
             height: 100%;
             width: 100%;
+            position: absolute;
     
             .qb-wall-cover{
                 height: 100%;
@@ -118,7 +91,7 @@
                 position: relative;
                 background-color: rgba(0,0,0,0.2);
                 font-family: 'Permanent Marker', cursive;
-                
+    
                 .qb-wall-content{
                     height: 100%;
                     width: 100%;
@@ -129,8 +102,45 @@
                         display: table-cell;
                         vertical-align: middle;
                         text-align: center;
-                        font-size: 40px;
+                        font-size: 60px;
                         padding: 5%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .qb-wall{
+        width: 100%;
+        height: 100vh;
+        
+        .qb-wall-bg-cover{
+            .qb-wall-bg{
+                height: 100%;
+                width: 100%;
+        
+                .qb-wall-cover{
+                    height: 100%;
+                    width:100%;
+                    position: relative;
+                    background-color: rgba(0,0,0,0.2);
+                    font-family: 'Permanent Marker', cursive;
+                    
+                    .qb-wall-content{
+                        height: 100%;
+                        width: 100%;
+                        display: table;
+        
+                        .qb-wall-text{
+                            color: rgb(241, 241, 241);
+                            display: table-cell;
+                            vertical-align: middle;
+                            text-align: center;
+                            font-size: 40px;
+                            padding: 5%;
+                        }
                     }
                 }
             }
@@ -427,5 +437,138 @@
 
 .qb-footer{
     background-color: #08b76d;
-    padding: 100px;
+    padding-top: 1.5%;
+    padding-bottom: 100px;
+
+    .qb-footer-padding{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .qb-footer-head{
+        padding: 10px;
+        font-size: 30px;
+        color: #fff;
+        text-align: left;
+    }
+
+    .qb-footer-text{
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+        padding: 10px;
+    }
+
+    .qb-footer-cards{
+        padding: 2.5%; 
+        text-align: center;
+
+        .qb-footer-card{
+            width: 24%;
+            display: inline-block;
+            text-align: center;
+
+            .qb-footer-icon{
+                font-size: 50px;  
+                color: #fff;  
+            }
+            .qb-footer-name{
+                font-size: 20px;
+                font-weight: 500;
+                color: #fff;
+            }
+        }
+    }
+
+    .qb-site{
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        .qb-site-logo{
+            text-align: center;
+            font-size: 35px;
+            font-weight: 500;
+            color: #fff;
+        }
+
+        .qb-site-text{
+            text-align: center;
+            font-size: 20px;
+            font-weight: 400;
+            color: #fff;
+        }
+    }
+    .qb-credit{
+        background-color: #fff;
+        text-align: center;
+        color: #3a3a3a;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .qb-footer{
+        background-color: #08b76d;
+        padding-top: 5%;
+        padding-left: 10%;
+        padding-right: 10%;
+        
+        .qb-footer-head{
+            padding: 10px;
+            font-size: 30px;
+            color: #fff;
+            text-align: center;
+        }
+
+        .qb-footer-text{
+            text-align: center;
+            font-size: 20px;
+            color: #fff;
+            padding: 5px;
+        }
+
+        .qb-footer-cards{
+            padding: 5%;
+            text-align: center;
+    
+            .qb-footer-card{
+                width: 30%;
+                text-align: center;
+    
+                .qb-footer-icon{
+                    font-size: 25px;  
+                    color: #fff;  
+                }
+                .qb-footer-name{
+                    font-size: 15px;
+                    font-weight: 500;
+                    color: #fff;
+                }
+            }
+        }
+
+        .qb-site{
+            padding-top: 30px;
+            padding-bottom: 30px;
+    
+            .qb-site-logo{
+                text-align: center;
+                font-size: 35px;
+                font-weight: 500;
+                color: #fff;
+            }
+    
+            .qb-site-text{
+                text-align: center;
+                font-size: 15px;
+                font-weight: 400;
+                color: #fff;
+            }
+
+        }
+        .qb-credit{
+            background-color: #3a3a3a;
+            text-align: center;
+            color: #fff;
+        }
+    }
 }
